{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 133,
  "lineage": "11946199-c9bb-ef9d-38be-670270bc8f66",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05494016e228c2ba8",
            "domain": "vpc",
            "id": "eipalloc-04c03573c9d28e747",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-05c7db6c9ba622ea0",
            "private_dns": "ip-10-139-0-205.eu-central-1.compute.internal",
            "private_ip": "10.139.0.205",
            "public_dns": "ec2-18-159-117-161.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.117.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccc52d1499699b6b",
            "arn": "arn:aws:ec2:eu-central-1:112659975190:instance/i-060ccf06510dc5ac4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "experiment-eks-node-instance-profile",
            "id": "i-060ccf06510dc5ac4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "martivo-x220",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095a7b39d92246857",
            "private_dns": "ip-10-139-0-81.eu-central-1.compute.internal",
            "private_ip": "10.139.0.81",
            "public_dns": "ec2-3-70-176-172.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.176.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-03d3d6c60b8ac53b6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d3adb210d347d1",
            "tags": {
              "Name": "experiment-k3d"
            },
            "tags_all": {
              "Name": "experiment-k3d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fbbace557256e78"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu-server",
            "data.aws_availability_zone.a",
            "aws_iam_instance_profile.node",
            "aws_iam_role.node",
            "aws_security_group.node",
            "aws_subnet.public-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kind",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccc52d1499699b6b",
            "arn": "arn:aws:ec2:eu-central-1:112659975190:instance/i-01e2b7f25701bbd7a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "experiment-eks-node-instance-profile",
            "id": "i-01e2b7f25701bbd7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "martivo-x220",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b7a53d83166daa1",
            "private_dns": "ip-10-139-0-30.eu-central-1.compute.internal",
            "private_ip": "10.139.0.30",
            "public_dns": "ec2-18-159-104-194.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.104.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-04d0cee8d5efd6345",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d3adb210d347d1",
            "tags": {
              "Name": "experiment-kind"
            },
            "tags_all": {
              "Name": "experiment-kind"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fbbace557256e78"
            ]
          },
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_ami.ubuntu-server",
            "data.aws_availability_zone.a",
            "aws_iam_instance_profile.node",
            "aws_iam_role.node",
            "aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "microk8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccc52d1499699b6b",
            "arn": "arn:aws:ec2:eu-central-1:112659975190:instance/i-0859a3e0d516bf61b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "experiment-eks-node-instance-profile",
            "id": "i-0859a3e0d516bf61b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "martivo-x220",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0581c65ab191d20f2",
            "private_dns": "ip-10-139-0-162.eu-central-1.compute.internal",
            "private_ip": "10.139.0.162",
            "public_dns": "ec2-3-123-21-54.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.21.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-094b2a9c8c00917a7",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d3adb210d347d1",
            "tags": {
              "Name": "experiment-microk8s"
            },
            "tags_all": {
              "Name": "experiment-microk8s"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fbbace557256e78"
            ]
          },
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_ami.ubuntu-server",
            "data.aws_availability_zone.a",
            "aws_iam_instance_profile.node",
            "aws_iam_role.node",
            "aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minikube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccc52d1499699b6b",
            "arn": "arn:aws:ec2:eu-central-1:112659975190:instance/i-0597c487819c8e157",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "experiment-eks-node-instance-profile",
            "id": "i-0597c487819c8e157",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "martivo-x220",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015566a8b164c9335",
            "private_dns": "ip-10-139-0-49.eu-central-1.compute.internal",
            "private_ip": "10.139.0.49",
            "public_dns": "ec2-18-159-60-218.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.60.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0b7287d0a901943ca",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d3adb210d347d1",
            "tags": {
              "Name": "experiment-minikube"
            },
            "tags_all": {
              "Name": "experiment-minikube"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fbbace557256e78"
            ]
          },
          "dependencies": [
            "data.aws_availability_zone.a",
            "aws_iam_instance_profile.node",
            "aws_iam_role.node",
            "aws_security_group.node",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_ami.ubuntu-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:internet-gateway/igw-02f7bc53735b6acbd",
            "id": "igw-02f7bc53735b6acbd",
            "owner_id": "112659975190",
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c03573c9d28e747",
            "connectivity_type": "public",
            "id": "nat-0c5bba8160c29f05c",
            "network_interface_id": "eni-05c7db6c9ba622ea0",
            "private_ip": "10.139.0.205",
            "public_ip": "18.159.117.161",
            "subnet_id": "subnet-078d3adb210d347d1",
            "tags": {
              "Name": "experiment-gw-a"
            },
            "tags_all": {
              "Name": "experiment-gw-a"
            }
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zone.a",
            "aws_eip.nat-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:route-table/rtb-0fab6fd73a117fee8",
            "id": "rtb-0fab6fd73a117fee8",
            "owner_id": "112659975190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5bba8160c29f05c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "experiment-r-private-a"
            },
            "tags_all": {
              "Name": "experiment-r-private-a"
            },
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.main",
            "data.aws_availability_zone.a",
            "aws_eip.nat-a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:route-table/rtb-0a4184824bc25166e",
            "id": "rtb-0a4184824bc25166e",
            "owner_id": "112659975190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f7bc53735b6acbd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "experiment-r-public"
            },
            "tags_all": {
              "Name": "experiment-r-public"
            },
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ra-app-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0074b4b533cd49edd",
            "route_table_id": "rtb-0fab6fd73a117fee8",
            "subnet_id": "subnet-0d045f4192ac562cd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zone.a",
            "aws_eip.nat-a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw-a",
            "aws_route_table.r-private-a",
            "aws_subnet.private-app-a",
            "aws_subnet.public-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ra-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d15672a9262d0a9",
            "route_table_id": "rtb-0a4184824bc25166e",
            "subnet_id": "subnet-078d3adb210d347d1"
          },
          "dependencies": [
            "data.aws_availability_zone.a",
            "aws_internet_gateway.gw",
            "aws_route_table.r-public",
            "aws_subnet.public-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:security-group/sg-08fbbace557256e78",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fbbace557256e78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "experiment-eks-node-sg",
            "name_prefix": "",
            "owner_id": "112659975190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "experiment-eks-node-sg"
            },
            "tags_all": {
              "Name": "experiment-eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:subnet/subnet-0d045f4192ac562cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.139.4.0/24",
            "id": "subnet-0d045f4192ac562cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112659975190",
            "tags": {
              "Name": "experiment-private-app-a"
            },
            "tags_all": {
              "Name": "experiment-private-app-a"
            },
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "dependencies": [
            "data.aws_availability_zone.a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:subnet/subnet-078d3adb210d347d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.139.0.0/24",
            "id": "subnet-078d3adb210d347d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "112659975190",
            "tags": {
              "Name": "experiment-public-a"
            },
            "tags_all": {
              "Name": "experiment-public-a"
            },
            "vpc_id": "vpc-0a6678db6d02f8161"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zone.a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:112659975190:vpc/vpc-0a6678db6d02f8161",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.139.0.0/16",
            "default_network_acl_id": "acl-0ebec2d351ffec757",
            "default_route_table_id": "rtb-07da1f15236a45a18",
            "default_security_group_id": "sg-0173015258122288b",
            "dhcp_options_id": "dopt-d12539ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a6678db6d02f8161",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07da1f15236a45a18",
            "owner_id": "112659975190",
            "tags": {
              "Name": "experiment-vpc"
            },
            "tags_all": {
              "Name": "experiment-vpc"
            }
          }
        }
      ]
    }
  ]
}